[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/hud/text_next.png" type="Texture" id=1]
[ext_resource path="res://assets/hud/text_end.png" type="Texture" id=2]
[ext_resource path="res://scenes/TrianglePulse.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "pulsing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 3.13834, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Triangle" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -507.0
margin_bottom = -297.0
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 2 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/pulsing = SubResource( 1 )
[connection signal="focus_entered" from="." to="." method="_on_Triangle_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Triangle_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Triangle_pressed"]
